# cc-bridge

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CONFIG.md  COOKBOOK.md  WINDOWS_SECURITY_TESTS.md  async-handoff-design.md  recipes.md  v0.2-roadmap.md  wal-rollback-design.md
examples/acceptance_check_demo/: README.md  checklist.md  report.example.md
examples/acceptance_check_demo/sample_project/: calc.py  test_calc.py
examples/contracted_handoff_demo/: README.md  demo.py  handoff_request.json
examples/contracted_handoff_demo/sample_project/tests/: test_app.py
src/cc_bridge/: __init__.py  checklist.py  cli.py
src/cc_bridge/bridge/: __init__.py  agents.py  audit.py  config.py  context.py  contracts.py  evidence.py  executor.py  gitsafe.py  handoff.py  handoff_runner.py  handoff_store.py  jobobject.py  locks.py  mcp_to_claude.py  mcp_to_codex.py  parser.py  policy.py  progress.py  scope.py  snapshot.py  status.py  wal.py
src/cc_bridge/installer/: __init__.py  build_dmg.sh  build_exe.py  configurator.py  detector.py  main.py  mcp_selftest.py  tester.py
tests/: conftest.py  test_agents.py  test_audit.py  test_checklist.py  test_child_env.py  test_cli.py  test_config.py  test_configurator.py  test_context.py  test_contracts.py  test_detector.py  test_evidence.py  test_executor.py  test_failover.py  test_git_hardening.py  test_gitsafe.py  test_handoff_runner.py  test_handoff_store.py  test_handoff_tools.py  test_integration_bridge.py  test_jobobject.py  test_locks.py  test_main.py  test_mcp_selftest.py  test_mcp_to_claude.py  test_mcp_to_codex.py  test_parser.py  test_parser_output.py  test_policy.py  test_progress.py  test_scope.py  test_snapshot.py  test_status.py  test_tester.py  test_wal.py  test_wal_crash_recovery.py  test_wal_integration.py
